--- a/TestWebsite/webpage.html
+++ b/TestWebsite/webpage.html
@@ -5,7 +5,7 @@
 <form method="POST" action="http://localhost:8080/RPC">
 
 Player:<input type="text" name="player1Move">
-Computer:<input type="text" name="player2Move" value="player2Move" disabled>
+Computer:<input type="text" name="player2Move" value="player2Move">
 
 <input type="submit" value="GO">
 
