--- a/TestWebsite/webpage.html
+++ b/TestWebsite/webpage.html
@@ -1,11 +1,16 @@
 <html><body>
 
 <h1> RockScissorsPaper</h1>
+<h2> Rules: </h2>
+<h3> First to 3 wins </h3>
+<h3> Points for tie or win </h3>
+<h3> Type "computer" as a user for a random value generator </h3>
+
 
 <form method="POST" action="http://localhost:8080/RPC">
 
-Player:<input type="text" name="player1Move">
-Computer:<input type="text" name="player2Move" value="player2Move">
+Player1:<input type="text" name="player1Move">
+Player2:<input type="text" name="player2Move" placeholder="computer" value="computer">
 
 <input type="submit" value="GO">
 
